# tce-player-demo

./: Jenkinsfile  README.md  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
frontend/: .env.development  .env.production  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: TCEPlayer.tsx
frontend/src/config/: api.ts
frontend/src/services/: api.ts
nginx/: nginx.conf
